# put_quiz

./: .gitmodules  README.md  config.txt  runner.py
.github/workflows/: formatting.yml  opensuse.yml
DockerFiles/: Dockerfile
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/assets/: quiz_example.json
frontend/src/components/: index.ts
frontend/src/components/AnsweredSidebar/: AnsweredSidebar.css  AnsweredSidebar.tsx  index.ts
frontend/src/components/QuestionCard/: QuestionCard.css  QuestionCard.tsx  index.ts
frontend/src/components/QuestionPreview/: QuestionPreview.css  QuestionPreview.tsx  index.ts
frontend/src/components/QuizPreview/: QuestionPreview.tsx  QuizPreview.css  QuizPreview.tsx  index.ts
frontend/src/components/StandingTable/: StandingTable.css  StandingTable.tsx  index.ts  types.ts
frontend/src/components/Timebar/: Timebar.css  Timebar.tsx  index.ts
frontend/src/pages/: index.ts
frontend/src/pages/LobbyPage/: LobbyPage.css  LobbyPage.tsx  index.ts
frontend/src/pages/PlayPage/: PlayPage.css  PlayPage.tsx
frontend/src/pages/createQuiz/: createQuiz.css  createQuiz.tsx  index.ts
frontend/src/pages/home/: HomePage.css  HomePage.tsx  index.ts
frontend/src/routes/: routes.tsx
frontend/src/utils/: index.ts
server/: .gitignore  CMakeLists.txt
server/apps/: CMakeLists.txt  app.cpp
server/include/server/: client.hpp  game.hpp  host.hpp  message_handler.hpp  player.hpp  question.hpp  quiz.hpp  server.hpp  socket.hpp  user.hpp  utils.h
server/scripts/bash/: build_in_docker.sh
server/scripts/python/: run-clang-format.py
server/src/: CMakeLists.txt  client.cpp  game.cpp  host.cpp  message_handler.cpp  player.cpp  question.cpp  quiz.cpp  server.cpp  socket.cpp  user.cpp  utils.cpp
(+24 files in other folders)
